Roll back Manifest's project name -- so that this component matches the previous versions.

--- a/animate-css/pom.xml
+++ b/animate-css/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>animate-css</artifactId>
     <version>2.0.0</version>
 
-    <name>Animate-CSS Component</name>
+    <name>Animate-CSS</name>
 
     <inceptionYear>2020</inceptionYear>
     <organization>
