finalize initial version of FileTree

--- a/filetree-demo/pom.xml
+++ b/filetree-demo/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.infraleap</groupId>
+    <groupId>org.vaadin.addons</groupId>
     <artifactId>filetree-demo</artifactId>
     <version>1.0.0</version>
 
@@ -28,7 +28,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.infraleap</groupId>
+            <groupId>org.vaadin.addons</groupId>
             <artifactId>filetree</artifactId>
             <version>1.0.0</version>
         </dependency>
