--- a/filetree/pom.xml
+++ b/filetree/pom.xml
@@ -3,9 +3,9 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.vaadin.addons</groupId>
+    <groupId>org.vaadin.addons.infraleap</groupId>
     <artifactId>filetree</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
 
     <name>FileTree</name>
 
